--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 headingSecondary
 {
-    text-color:#8142f5;
+    color:#8142f5;
 
 }
 img
@@ -20,9 +20,10 @@ footer
     padding : 35px;
     margin-top: 40px;
 }
-media
-{
+@media only screen and (max-width:786px){
+body{
     background-color: #757575;
-    Text-color : #FFF;
+    color : #FFF;
     font-family: Arial, Helvetica, sans-serif;
+};
 }
